--- a/src/components/DropdownDecription/dropdown_description.scss
+++ b/src/components/DropdownDecription/dropdown_description.scss
@@ -41,8 +41,8 @@ $color-black: #000000;
     width: 100%;
 }
   .dropdown_description { 
-    position: absolute;
-    top: 0px;
+      position: absolute;
+      top: 0px;
       z-index: 1;
       display: flex;
       align-items: center;
@@ -68,8 +68,9 @@ $color-black: #000000;
   .dropdown_content {
     position: relative;
     z-index: -1;
-    padding: 30px 20px;
+    padding: 65px 20px;
     width:100%;
+    min-height: 200px;
     border-radius: 15px;
     background: $color-grey;
     font-family: $font-montserrat;
