--- a/src/components/DropdownEquipments/dropdown_equipments.scss
+++ b/src/components/DropdownEquipments/dropdown_equipments.scss
@@ -70,15 +70,13 @@ $color-black: #000000;
     
       .dropdown_content {
         position: relative;
+        min-height: 250px;
         z-index: -1;
-        padding: 30px 20px;
+        padding: 65px 20px;
         width:100%;
         border-radius: 15px;
         background: $color-grey;
         color: $color-black;
-
-        
-        
         transform: scaleY(0);
         animation: down_info 0.2s linear;
         animation-fill-mode: both;
