--- a/src/pages/notFound/notfound.scss
+++ b/src/pages/notFound/notfound.scss
@@ -52,7 +52,7 @@ $color-black : #000000;
         font-size: 18px;
         font-weight: 500;
         text-align: center;
-        width: 260px;
+        width: 100%;
         height: 52px;
     }
     .goBack_link{
